@@ -3,6 +3,8 @@ anna (1.08) UNRELEASED; urgency=low
   * Colin Watson
     - Fix log message when installing a package due to the anna-install
       queue.
+    - Install kernel module udebs if the name they provide is queued, so
+      that 'anna-install ext2-modules' works as expected.
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 17:11:07 +0100
 
